artist page jumbotron text visibility fix

--- a/css/main-front.css
+++ b/css/main-front.css
@@ -39,6 +39,9 @@ body {
     letter-spacing: -1px;
 }
 
+.artista {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+}
 
 
 
